Fix missing blueprint registrations and template route references

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                                                    <a class="nav-link" href="{{ url_for('neighborhood_map') }}">
+                        <a class="nav-link" href="{{ url_for('map.index') }}">
                             <i class="bi bi-geo-alt me-1"></i>Mapa
                         </a>
                     </li>
@@ -89,7 +89,7 @@
                             <ul class="dropdown-menu dropdown-menu-end" id="notifications-dropdown">
                                 <li><h6 class="dropdown-header">Notificaciones</h6></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{{ url_for('notifications') }}">Ver todas</a></li>
+                                <li><a class="dropdown-item" href="#">Ver todas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -98,7 +98,7 @@
                                 {{ current_user.name }}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="{{ url_for('profile') }}">
+                                <li><a class="dropdown-item" href="#">
                                     <i class="bi bi-person me-2"></i>Perfil
                                 </a></li>
                                 {% if current_user.role == 'admin' %}
